push clean up code practice apply transaction
