# Eduflex/Eduflex/Eduflex/DTOs/UpdateUserProfileDto.cs
@@ -1,0 +1,11 @@
+﻿using System;
+
+namespace Eduflex.API.DTOs
+{
+    public class UpdateUserProfileDto
+    {
+        public string FirstName { get; set; } = string.Empty;
+        public string LastName { get; set; } = string.Empty;
+        public string Email { get; set; } = string.Empty;
+    }
+}
