# Eduflex/Eduflex/ShareService/Models/UpdateUserProfileModel.cs
@@ -1,0 +1,11 @@
+﻿using System;
+
+namespace Eduflex.API.DTOs
+{
+    public class UpdateUserProfileModel
+    {
+        public string FirstName { get; set; } = string.Empty;
+        public string LastName { get; set; } = string.Empty;
+        public string Email { get; set; } = string.Empty;
+    }
+}
